more report work

--- a/report.ipynb
+++ b/report.ipynb
@@ -29,11 +29,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Familiarizing with Transformers and PyTorch\n",
+    "## Familiarizing myself with Transformers and PyTorch\n",
     "\n",
     "Trasnformers is very simple to use compared to using other existing repos or reimplementing these models from scratch. However, its still not the most straight forward library to use and required quite a few weeks for me to really figure it out. This was partly due to the fact I had little exposure to PyTorch, as I had predominantly been using Keras for my machine learning work.\n",
     "\n",
-    "I started off training the smallest size of original BERT model, bert-base-uncased. "
+    "I started off working through PyTorch's [tutorials](pytorch.org/tutorials/), and completed two, that seemed to be most relevant for me.\n",
+    "\n",
+    "1. ***Writing Custom Datasets, Dataloaders and Transforms*** went in depth on how to load and preprocess/augment data from a non trivial dataset in pytorch fashion. This introduced me to pytorch dataloaders and custom datasets. A pytorch dataset is an object that contains a list of data and implements the `__get__` dunder method, which is used  to extract a single sample given an index. A dataloader is basically a generator function that uses multithreading to extract batchs of samples from a pytorch dataset in parrallel to main thread of execution.\n",
+    "\n",
+    "2. ***Sequence-to-Sequence Modeling with NN.Transformer and TorchText***, a tutorial on how to train a sequence-to-sequence model that uses the nn.Transformer module. The models featured on HuggingFace's Transformers are made up of layers of these Transformer blocks. I thought that this tutorial would be useful before tackling the Trasformers library as it goes over the entire pipeline of a training a transformer model. Most of this however turned out to be unnecessary, because of Transformer's level of abstraction, and acted more as lesson.\n",
+    "\n",
+    "Next I moved on to learning to use the Transformers library. I started off just wanting to get one of the available models instantiated and then running training/testing/inference/saving for sequence classification. \n",
+    "\n",
+    "Below is an example of how this initial test would have looked:\n",
+    "\n",
+    "1. **Declare the required imports**\n",
+    "\n",
+    "        import torch\n",
+    "        from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "        \n",
+    "   - torch is an alias for PyTorch. It is required to use the transformers package.\n",
+    "\n",
+    "\n",
+    "2. **Define model type and load its components**\n",
+    "\n",
+    "        model_type = 'bert-base-uncased'\n",
+    "        tokenizer = BertTokenizer(model_type)\n",
+    "        model = BertForSequenceClassification.from_pretrained(model_type)\n",
+    "        \n",
+    "   - model_type defines which version of the model is to be used.\n",
+    "   - BertTokenizer is a tool that preprocesses a piece of text into numerical tokens for the model.\n",
+    "   - BertForSequenceClassification is a pretrained BERT transformer model with an untrained\n",
+    "     classification head connected to the final hidden layers output.\n",
+    "\n",
+    "\n",
+    "3. **Transform raw text into an input tensor for the model**\n",
+    "\n",
+    "        input_text = \"Hello, my dog is cute\"\n",
+    "        encoded_text = tokenizer.encode(input_text)\n",
+    "        input_tensor = torch.tensor(encoded_text).unsequeeze(0) # Add batch dimension\n",
+    "        input_label = torch.tensor([1]).unsqueeze(0)  # Add batch dimension\n",
+    "    \n",
+    "    - input_text is a raw string a of text.\n",
+    "    - encoded_text is the output of the tokenizers encode function. It is a list of integers in\n",
+    "      the range 0-VOCABULARY_SIZE with a length of the same number of words in the input_text.\n",
+    "    - input_tensor is the encoded_text list converted to a PyTorch tensor.\n",
+    "    - input_label is the same as the input_tensor but it is the what will be used as the ground \n",
+    "      truth to compare to the models prediction.\n",
+    "    \n",
+    "    \n",
+    "4. **Perform a forward pass of the model**\n",
+    "\n",
+    "        outputs = model(input_ids, labels=labels)\n",
+    "        loss, logits = outputs[:2]\n",
+    "        \n",
+    "    - The model returns a tuple containing the loss (how close its prediction was to the target label)\n",
+    "      and logits (a probability distribution of size n, where n is the number of class labels).\n",
+    "    \n",
+    "    \n",
+    "5. **Update weights**\n",
+    "        \n",
+    "        loss.backward()\n",
+    "    \n",
+    "    - Performs back propagation using gradient decent and updates the models weights accordingly.\n",
+    "\n",
+    "\n",
+    "\n",
+    "**FULL EXAMPLE**\n",
+    "\n",
+    "    import torch\n",
+    "    from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "        \n",
+    "    model_type = 'bert-base-uncased'\n",
+    "    tokenizer = BertTokenizer(model_type)\n",
+    "    model = BertForSequenceClassification.from_pretrained(model_type)\n",
+    "        \n",
+    "    input_text = \"Hello, my dog is cute\"\n",
+    "    encoded_text = tokenizer.encode(input_text)\n",
+    "    input_tensor = torch.tensor(encoded_text).unsequeeze(0) # Add batch dimension\n",
+    "    input_label = torch.tensor([1]).unsqueeze(0)  # Add batch dimension\n",
+    "    \n",
+    "    outputs = model(input_ids, labels=labels)\n",
+    "    loss, logits = outputs[:2]\n",
+    "    loss.backward()"
    ]
   },
   {
