more work on report

--- a/report.ipynb
+++ b/report.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "## [Transformers](https://github.com/huggingface/transformers)\n",
     "\n",
-    "The beginning of this semester yielded a new tool in the NLP community.The work I did [last semester](https://github.com/knuddj1/Project-1-Sentiment-Analysis/blob/master/report.ipynb) was made fairly irrelevant by transformers. Created by the HuggingFace team, transformers took all the difficult implementation details out of using the recent, powerful,transformer based, language models and provided a fairly compact python interface for interacting with them. Originally transformers only supported using the popular machine learning framework [PyTorch](https://github.com/huggingface/transformers) as a backend, and was named pytorch_transformers. It now supports tensorflow as well, however I began using the library when only pytorch was available, so all my work is using pytorch. "
+    "The beginning of this semester yielded a new tool in the NLP community.The work I did [last semester](https://github.com/knuddj1/Project-1-Sentiment-Analysis/blob/master/report.ipynb) was made fairly irrelevant by transformers. Created by the HuggingFace team, transformers took all the difficult implementation details out of using the recent, powerful,transformer based, language models and provided a fairly compact python interface for interacting with them. Originally transformers only supported using the popular machine learning framework [PyTorch](https://github.com/huggingface/transformers) as a backend, and was named pytorch_transformers. It now supports tensorflow as well, however I began using the library when only pytorch was available, so all my work is using pytorch. \n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -39,63 +41,96 @@
     "\n",
     "2. ***Sequence-to-Sequence Modeling with NN.Transformer and TorchText***, a tutorial on how to train a sequence-to-sequence model that uses the nn.Transformer module. The models featured on HuggingFace's Transformers are made up of layers of these Transformer blocks. I thought that this tutorial would be useful before tackling the Trasformers library as it goes over the entire pipeline of a training a transformer model. Most of this however turned out to be unnecessary, because of Transformer's level of abstraction, and acted more as lesson.\n",
     "\n",
-    "Next I moved on to learning to use the Transformers library. I started off just wanting to get one of the available models instantiated and then running training/testing/inference/saving for sequence classification. \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting hands dirty\n",
     "\n",
-    "Below is an example of how this initial test would have looked:\n",
+    "I then moved on to try and learn to use the Transformers library. I started off just wanting to get one of the available models instantiated and perform a forward/backwards pass, for sequence classification. \n",
+    "\n",
+    "Below is a similar example of how this initial test may have looked:\n",
     "\n",
     "1. **Declare the required imports**\n",
-    "\n",
+    "   ```\n",
     "        import torch\n",
     "        from transformers import BertTokenizer, BertForSequenceClassification\n",
-    "        \n",
-    "   - torch is an alias for PyTorch. It is required to use the transformers package.\n",
-    "\n",
-    "\n",
+    "   ```\n",
+    "   \n",
+    "   - torch is an alias for PyTorch. It is required to use the transformers package."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. **Define model type and load its components**\n",
-    "\n",
+    "    ```\n",
     "        model_type = 'bert-base-uncased'\n",
     "        tokenizer = BertTokenizer(model_type)\n",
     "        model = BertForSequenceClassification.from_pretrained(model_type)\n",
-    "        \n",
-    "   - model_type defines which version of the model is to be used.\n",
-    "   - BertTokenizer is a tool that preprocesses a piece of text into numerical tokens for the model.\n",
-    "   - BertForSequenceClassification is a pretrained BERT transformer model with an untrained\n",
-    "     classification head connected to the final hidden layers output.\n",
+    "    ```\n",
     "\n",
-    "\n",
+    "    - model_type defines which version of the model is to be used. \n",
+    "    - BertTokenizer is a tool that preprocesses a piece of text into numerical tokens for the model.\n",
+    "    - BertForSequenceClassification pretrained BERT transformer model with an untrained classification head connected to the   final hidden layers output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3. **Transform raw text into an input tensor for the model**\n",
-    "\n",
+    "    ```\n",
     "        input_text = \"Hello, my dog is cute\"\n",
     "        encoded_text = tokenizer.encode(input_text)\n",
     "        input_tensor = torch.tensor(encoded_text).unsequeeze(0) # Add batch dimension\n",
     "        input_label = torch.tensor([1]).unsqueeze(0)  # Add batch dimension\n",
+    "    ```\n",
     "    \n",
     "    - input_text is a raw string a of text.\n",
     "    - encoded_text is the output of the tokenizers encode function. It is a list of integers in\n",
-    "      the range 0-VOCABULARY_SIZE with a length of the same number of words in the input_text.\n",
+    "      the range 0 - Vocabulary size (30000) with a list length of the same number of words in the input_text.\n",
     "    - input_tensor is the encoded_text list converted to a PyTorch tensor.\n",
     "    - input_label is the same as the input_tensor but it is the what will be used as the ground \n",
     "      truth to compare to the models prediction.\n",
-    "    \n",
-    "    \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. **Perform a forward pass of the model**\n",
-    "\n",
+    "    ```\n",
     "        outputs = model(input_ids, labels=labels)\n",
     "        loss, logits = outputs[:2]\n",
-    "        \n",
+    "    ```\n",
+    "    \n",
     "    - The model returns a tuple containing the loss (how close its prediction was to the target label)\n",
-    "      and logits (a probability distribution of size n, where n is the number of class labels).\n",
-    "    \n",
-    "    \n",
+    "      and logits (a probability distribution of size n, where n is the number of class labels)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. **Update weights**\n",
-    "        \n",
+    "    ```    \n",
     "        loss.backward()\n",
+    "    ```\n",
     "    \n",
-    "    - Performs back propagation using gradient decent and updates the models weights accordingly.\n",
-    "\n",
-    "\n",
-    "\n",
-    "**FULL EXAMPLE**\n",
+    "    - Performs back propagation using gradient decent and updates the models weights accordingly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Full example above, Code only:**\n",
     "\n",
     "    import torch\n",
     "    from transformers import BertTokenizer, BertForSequenceClassification\n",
@@ -111,14 +146,14 @@
     "    \n",
     "    outputs = model(input_ids, labels=labels)\n",
     "    loss, logits = outputs[:2]\n",
-    "    loss.backward()"
+    "    loss.backward()\n",
+    "    \n",
+    "--- "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -138,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
