--- a/report.ipynb
+++ b/report.ipynb
@@ -154,6 +154,61 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Grid Search\n",
+    "\n",
+    "As seems to be tradition in my machine learning projects, I then decided to create another grid search. This time however, my search was fairly abstract, because I was fine-tuning a model instead of training from scratch. This meant that I didn't need to train multiple versions of the same model with slight tweaks for example: embedding size, number of units in a layer, optimizers and layer activation functions. Instead my grid search consisted of: different model architectures, different pretrained models and batch size. This resulted in a much smaller number of models that needed to be trained and an overall shorter grid search time.\n",
+    "\n",
+    "The following is a comparison between this grid search and those which I created during my special topic and previous semesters project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center><h3>Special Topic</h3></center></th>\n",
+    "        <th><center><h3>Project One</h3></center></th>\n",
+    "    </tr>\n",
+    "<tr><td>\n",
+    "\n",
+    "| Hyper Parameter             | Options|\n",
+    "|-----------------------------|:------------------------------:|\n",
+    "| Embedding Size              | 50, 100, 150, 200, 250 and 300 |\n",
+    "| Numbers of Recurrent Layers |                      1, 2 or 3 |\n",
+    "| Types of Recurrent Layers   |                    GRU or LSTM |\n",
+    "| Total Unique Models         |                             36 |\n",
+    "| Training Time               |                        2 Weeks |\n",
+    "\n",
+    "</td><td>\n",
+    "\n",
+    "|    Hyper Parameter    |        Options        |\n",
+    "|:---------------------:|:---------------------:|\n",
+    "| Embedding Size        |           768 or 1024 |\n",
+    "| Validation Split Size |            0.1 or 0.2 |\n",
+    "| Batch Size            |        64, 128 or 256 |\n",
+    "| Optimizers            |  SGD, RMSprop or Adam |\n",
+    "| Dropout Rates         |  0.1, 0.2, 0.3 or 0.4 |\n",
+    "| Activations           | ReLu, tanh or sigmoid |\n",
+    "| Number Dense Layers   |             1, 2 or 3 |\n",
+    "| Dense Layer Values    |    32, 64, 128 or 256 |\n",
+    "| Total Unique Models   |                 36288 |\n",
+    "| Search Time         \t|               6 Days  |\n",
+    "\n",
+    "</td></tr> </table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
