--- a/report.ipynb
+++ b/report.ipynb
@@ -165,18 +165,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center><h3>Special Topic</h3></center></th>\n",
-    "        <th><center><h3>Project One</h3></center></th>\n",
-    "    </tr>\n",
-    "<tr><td>\n",
+    "<center><h3>Special Topic</h3></center>\n",
+    "\n",
+    "---\n",
     "\n",
     "| Hyper Parameter             | Options|\n",
     "|-----------------------------|:------------------------------:|\n",
@@ -184,8 +176,16 @@
     "| Numbers of Recurrent Layers |                      1, 2 or 3 |\n",
     "| Types of Recurrent Layers   |                    GRU or LSTM |\n",
     "| Total Unique Models         |                             36 |\n",
-    "| Training Time               |                        2 Weeks |\n",
+    "| Training Time               |                        2 Weeks |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><h3>Project One</h3></center>\n",
     "\n",
+    "---\n",
     "\n",
     "|    Hyper Parameter    |        Options        |\n",
     "|:---------------------:|:---------------------:|\n",
@@ -198,16 +198,8 @@
     "| Number Dense Layers   |             1, 2 or 3 |\n",
     "| Dense Layer Values    |    32, 64, 128 or 256 |\n",
     "| Total Unique Models   |                 36288 |\n",
-    "| Search Time         \t|               6 Days  |\n",
-    "\n"
+    "| Search Time         \t|               6 Days  |\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
