--- a/report.ipynb
+++ b/report.ipynb
@@ -166,17 +166,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h3>Special Topic</h3></center>\n",
+    "### Special Topic\n",
     "\n",
     "---\n",
     "\n",
-    "| Hyper Parameter             | Options|\n",
-    "|-----------------------------|:------------------------------:|\n",
-    "| Embedding Size              | 50, 100, 150, 200, 250 and 300 |\n",
-    "| Numbers of Recurrent Layers |                      1, 2 or 3 |\n",
-    "| Types of Recurrent Layers   |                    GRU or LSTM |\n",
-    "| Total Unique Models         |                             36 |\n",
-    "| Training Time               |                        2 Weeks |"
+    "| Hyper Parameter             | Options\n",
+    "|-----------------------------|:------------------------------:\n",
+    "| Embedding Size              | 50, 100, 150, 200, 250 and 300 \n",
+    "| Numbers of Recurrent Layers |                      1, 2 or 3 \n",
+    "| Types of Recurrent Layers   |                    GRU or LSTM \n",
+    "| Total Unique Models         |                             36 \n",
+    "| Training Time               |                        2 Weeks"
    ]
   },
   {
@@ -199,6 +199,76 @@
     "| Dense Layer Values    |    32, 64, 128 or 256 |\n",
     "| Total Unique Models   |                 36288 |\n",
     "| Search Time         \t|               6 Days  |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<html>\n",
+    "    <style type=\"text/css\">\n",
+    "    .tg  {border-collapse:collapse;border-spacing:0;}\n",
+    "    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}\n",
+    "    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}\n",
+    "    .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}\n",
+    "    .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}\n",
+    "    .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}\n",
+    "    </style>\n",
+    "    <table class=\"tg\">\n",
+    "      <tr>\n",
+    "        <th class=\"tg-c3ow\">Hyper Parameter</th>\n",
+    "        <th class=\"tg-c3ow\">Options</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Embedding Size</td>\n",
+    "        <td class=\"tg-dvpl\">768 or 1024</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Validation Split Size</td>\n",
+    "        <td class=\"tg-dvpl\">0.1 or 0.2</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Batch Size</td>\n",
+    "        <td class=\"tg-dvpl\">64, 128 or 256</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
+    "        <td class=\"tg-dvpl\">36</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\"></td>\n",
+    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Optimizers</td>\n",
+    "        <td class=\"tg-dvpl\">SGD, RMSprop or Adam</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Dropout Rates</td>\n",
+    "        <td class=\"tg-dvpl\">0.1, 0.2, 0.3 or 0.4</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Activations</td>\n",
+    "        <td class=\"tg-dvpl\">ReLu, tanh or sigmoid</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Number Dense Layers</td>\n",
+    "        <td class=\"tg-dvpl\">1, 2 or 3</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Dense Layer Values</td>\n",
+    "        <td class=\"tg-dvpl\">32, 64, 128 or 256</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
+    "        <td class=\"tg-dvpl\">36</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Training Time</td>\n",
+    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "      </tr>\n",
+    "    </table>\n",
+    "</html>"
    ]
   }
  ],
