--- a/report.ipynb
+++ b/report.ipynb
@@ -205,7 +205,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "\n",
     "<html>\n",
     "    <style type=\"text/css\">\n",
@@ -216,6 +215,10 @@
     "    .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}\n",
     "    .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}\n",
     "    </style>\n",
+    "\n",
+    "<table>\n",
+    "<tr><th>Table 1 Heading 1 </th><th>Table 1 Heading 2</th></tr>\n",
+    "<tr><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
     "        <th class=\"tg-c3ow\">Hyper Parameter</th>\n",
@@ -270,6 +273,66 @@
     "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
     "      </tr>\n",
     "    </table>\n",
+    "\n",
+    "</td><td>\n",
+    "\n",
+    "<table class=\"tg\">\n",
+    "      <tr>\n",
+    "        <th class=\"tg-c3ow\">Hyper Parameter</th>\n",
+    "        <th class=\"tg-c3ow\">Options</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Embedding Size</td>\n",
+    "        <td class=\"tg-dvpl\">768 or 1024</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Validation Split Size</td>\n",
+    "        <td class=\"tg-dvpl\">0.1 or 0.2</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Batch Size</td>\n",
+    "        <td class=\"tg-dvpl\">64, 128 or 256</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
+    "        <td class=\"tg-dvpl\">36</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\"></td>\n",
+    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Optimizers</td>\n",
+    "        <td class=\"tg-dvpl\">SGD, RMSprop or Adam</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Dropout Rates</td>\n",
+    "        <td class=\"tg-dvpl\">0.1, 0.2, 0.3 or 0.4</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Activations</td>\n",
+    "        <td class=\"tg-dvpl\">ReLu, tanh or sigmoid</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Number Dense Layers</td>\n",
+    "        <td class=\"tg-dvpl\">1, 2 or 3</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Dense Layer Values</td>\n",
+    "        <td class=\"tg-dvpl\">32, 64, 128 or 256</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
+    "        <td class=\"tg-dvpl\">36</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Training Time</td>\n",
+    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "      </tr>\n",
+    "    </table>\n",
+    "\n",
+    "</td></tr> </table>\n",
+    "\n",
     "</html>"
    ]
   },
