--- a/report.ipynb
+++ b/report.ipynb
@@ -170,13 +170,13 @@
     "\n",
     "---\n",
     "\n",
-    "| Hyper Parameter             | Options\n",
-    "|-----------------------------|:------------------------------:\n",
-    "| Embedding Size              | 50, 100, 150, 200, 250 and 300 \n",
-    "| Numbers of Recurrent Layers |                      1, 2 or 3 \n",
-    "| Types of Recurrent Layers   |                    GRU or LSTM \n",
-    "| Total Unique Models         |                             36 \n",
-    "| Training Time               |                        2 Weeks"
+    "| Hyper Parameter             | Options                        |\n",
+    "|-----------------------------|:------------------------------:|\n",
+    "| Embedding Size              | 50, 100, 150, 200, 250 and 300 |\n",
+    "| Numbers of Recurrent Layers |                      1, 2 or 3 |\n",
+    "| Types of Recurrent Layers   |                    GRU or LSTM |\n",
+    "| Total Unique Models         |                             36 |\n",
+    "| Training Time               |                        2 Weeks |"
    ]
   },
   {
@@ -217,8 +217,35 @@
     "    </style>\n",
     "\n",
     "<table>\n",
-    "<tr><th>Table 1 Heading 1 </th><th>Table 1 Heading 2</th></tr>\n",
+    "<tr><th>Special Topic Grid Search</th><th>Project One Grid Search</th></tr>\n",
     "<tr><td>\n",
+    "    <table class=\"tg\">\n",
+    "      <tr>\n",
+    "        <th class=\"tg-9wq8\">Hyper Parameter</th>\n",
+    "        <th class=\"tg-c3ow\">Options</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Embedding Size</td>\n",
+    "        <td class=\"tg-dvpl\">50, 100, 150, 200, 250 or 300</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Numbers of Recurrent Layers</td>\n",
+    "        <td class=\"tg-dvpl\">1, 2 or 3</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Types of Recurrent Layers</td>\n",
+    "        <td class=\"tg-dvpl\">GRU or LSTM</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
+    "        <td class=\"tg-dvpl\">36</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0pky\">Training Time</td>\n",
+    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "      </tr>\n",
+    "    </table>\n",
+    "</td><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
     "        <th class=\"tg-c3ow\">Hyper Parameter</th>\n",
@@ -237,14 +264,6 @@
     "        <td class=\"tg-dvpl\">64, 128 or 256</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
-    "        <td class=\"tg-dvpl\">36</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\"></td>\n",
-    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
     "        <td class=\"tg-0pky\">Optimizers</td>\n",
     "        <td class=\"tg-dvpl\">SGD, RMSprop or Adam</td>\n",
     "      </tr>\n",
@@ -266,68 +285,11 @@
     "      </tr>\n",
     "      <tr>\n",
     "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
-    "        <td class=\"tg-dvpl\">36</td>\n",
+    "        <td class=\"tg-dvpl\">36288</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td class=\"tg-0pky\">Training Time</td>\n",
-    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
-    "      </tr>\n",
-    "    </table>\n",
-    "\n",
-    "</td><td>\n",
-    "\n",
-    "<table class=\"tg\">\n",
-    "      <tr>\n",
-    "        <th class=\"tg-c3ow\">Hyper Parameter</th>\n",
-    "        <th class=\"tg-c3ow\">Options</th>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Embedding Size</td>\n",
-    "        <td class=\"tg-dvpl\">768 or 1024</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Validation Split Size</td>\n",
-    "        <td class=\"tg-dvpl\">0.1 or 0.2</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Batch Size</td>\n",
-    "        <td class=\"tg-dvpl\">64, 128 or 256</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
-    "        <td class=\"tg-dvpl\">36</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\"></td>\n",
-    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Optimizers</td>\n",
-    "        <td class=\"tg-dvpl\">SGD, RMSprop or Adam</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Dropout Rates</td>\n",
-    "        <td class=\"tg-dvpl\">0.1, 0.2, 0.3 or 0.4</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Activations</td>\n",
-    "        <td class=\"tg-dvpl\">ReLu, tanh or sigmoid</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Number Dense Layers</td>\n",
-    "        <td class=\"tg-dvpl\">1, 2 or 3</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Dense Layer Values</td>\n",
-    "        <td class=\"tg-dvpl\">32, 64, 128 or 256</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Total Unique Models</td>\n",
-    "        <td class=\"tg-dvpl\">36</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
-    "        <td class=\"tg-0pky\">Training Time</td>\n",
-    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "        <td class=\"tg-0pky\">Search Time</td>\n",
+    "        <td class=\"tg-dvpl\">6 Days</td>\n",
     "      </tr>\n",
     "    </table>\n",
     "\n",
