--- a/report.ipynb
+++ b/report.ipynb
@@ -166,45 +166,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Special Topic\n",
-    "\n",
-    "---\n",
-    "\n",
-    "| Hyper Parameter             | Options                        |\n",
-    "|-----------------------------|:------------------------------:|\n",
-    "| Embedding Size              | 50, 100, 150, 200, 250 and 300 |\n",
-    "| Numbers of Recurrent Layers |                      1, 2 or 3 |\n",
-    "| Types of Recurrent Layers   |                    GRU or LSTM |\n",
-    "| Total Unique Models         |                             36 |\n",
-    "| Training Time               |                        2 Weeks |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<center><h3>Project One</h3></center>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "|    Hyper Parameter    |        Options        |\n",
-    "|:---------------------:|:---------------------:|\n",
-    "| Embedding Size        |           768 or 1024 |\n",
-    "| Validation Split Size |            0.1 or 0.2 |\n",
-    "| Batch Size            |        64, 128 or 256 |\n",
-    "| Optimizers            |  SGD, RMSprop or Adam |\n",
-    "| Dropout Rates         |  0.1, 0.2, 0.3 or 0.4 |\n",
-    "| Activations           | ReLu, tanh or sigmoid |\n",
-    "| Number Dense Layers   |             1, 2 or 3 |\n",
-    "| Dense Layer Values    |    32, 64, 128 or 256 |\n",
-    "| Total Unique Models   |                 36288 |\n",
-    "| Search Time         \t|               6 Days  |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "\n",
     "<html>\n",
     "    <style type=\"text/css\">\n",
@@ -217,7 +178,10 @@
     "    </style>\n",
     "\n",
     "<table>\n",
-    "<tr><th>Special Topic Grid Search</th><th>Project One Grid Search</th></tr>\n",
+    "<tr>\n",
+    "    <th><center>Special Topic Grid Search</center></th>\n",
+    "    <th><center>Project One Grid Search</center></th>\n",
+    "</tr>\n",
     "<tr><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
@@ -241,7 +205,7 @@
     "        <td class=\"tg-dvpl\">36</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td class=\"tg-0pky\">Training Time</td>\n",
+    "        <td class=\"tg-0pky\">Total Search Time</td>\n",
     "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
     "      </tr>\n",
     "    </table>\n",
@@ -288,11 +252,12 @@
     "        <td class=\"tg-dvpl\">36288</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td class=\"tg-0pky\">Search Time</td>\n",
+    "        <td class=\"tg-0pky\">Total Search Time</td>\n",
     "        <td class=\"tg-dvpl\">6 Days</td>\n",
     "      </tr>\n",
     "    </table>\n",
     "\n",
+    "</td><td>\n",
     "</td></tr> </table>\n",
     "\n",
     "</html>"
