--- a/report.ipynb
+++ b/report.ipynb
@@ -168,19 +168,10 @@
    "source": [
     "\n",
     "<html>\n",
-    "    <style type=\"text/css\">\n",
-    "    .tg  {border-collapse:collapse;border-spacing:0;}\n",
-    "    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}\n",
-    "    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}\n",
-    "    .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}\n",
-    "    .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}\n",
-    "    .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}\n",
-    "    </style>\n",
-    "\n",
     "<table>\n",
     "<tr>\n",
-    "    <th><center>Special Topic Grid Search</center></th>\n",
-    "    <th><center>Project One Grid Search</center></th>\n",
+    "    <th>Special Topic Grid Search</th>\n",
+    "    <th>Project One Grid Search</th>\n",
     "</tr>\n",
     "<tr><td>\n",
     "    <table class=\"tg\">\n",
