--- a/report.ipynb
+++ b/report.ipynb
@@ -168,11 +168,17 @@
    "source": [
     "\n",
     "<html>\n",
+    "    <style type=\"text/css\">\n",
+    "    .tg  {border-collapse:collapse;border-spacing:0;}\n",
+    "    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}\n",
+    "    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}\n",
+    "    .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}\n",
+    "    .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}\n",
+    "    .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}\n",
+    "    </style>\n",
+    "\n",
     "<table>\n",
-    "<tr>\n",
-    "    <th>Special Topic Grid Search</th>\n",
-    "    <th>Project One Grid Search</th>\n",
-    "</tr>\n",
+    "<tr><th>Special Topic Grid Search</th><th>Project One Grid Search</th><th>Project Two Grid Search</th></tr>\n",
     "<tr><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
@@ -247,8 +253,33 @@
     "        <td class=\"tg-dvpl\">6 Days</td>\n",
     "      </tr>\n",
     "    </table>\n",
-    "\n",
     "</td><td>\n",
+    "    <table class=\"tg\">\n",
+    "      <tr>\n",
+    "        <th class=\"tg-9wq8\">Hyper Parameter</th>\n",
+    "        <th class=\"tg-c3ow\">Options</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Architecture Type</td>\n",
+    "        <td class=\"tg-lqy6\">BERT, RoBERTa, DistilBERT</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Pretrained Models</td>\n",
+    "        <td class=\"tg-0lax\">base-uncased, large-uncased</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Batch Size</td>\n",
+    "        <td class=\"tg-lqy6\">32, 64, 128, 256</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Total Unique Models</td>\n",
+    "        <td class=\"tg-lqy6\">24</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Total Search Time</td>\n",
+    "        <td class=\"tg-lqy6\">2 Weeks</td>\n",
+    "      </tr>\n",
+    "    </table>\n",
     "</td></tr> </table>\n",
     "\n",
     "</html>"
